Dockerize, enhance message formatting